--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2825,6 +2825,78 @@
         "th":"",
         "id":""
     },
+    "item.2010.name":{
+        "en":"Pirate King - Weapon",
+        "fr":"Roi Pirate - Arme",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2011.name":{
+        "en":"Pirate King - Gloves",
+        "fr":"Roi Pirate - Gants",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2012.name":{
+        "en":"Pirate King - Ring",
+        "fr":"Roi Pirate - Anneau",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.2013.name":{
+        "en":"Pirate King - Necklace",
+        "fr":"Roi Pirate - Collier",
+        "es":"",
+        "ch":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.3000.name":{
         "en":"[Spirit Egg] Pudding Slime",
         "fr":"[Oeuf d'esprit] Slime Pudding",
