--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -11674,7 +11674,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Để nâng cấp kỹ năng này, bạn cần những vật phẩm sau đây:",
         "ar": "",
         "it": "",
         "pl": "",
