--- a/Translation/item.json
+++ b/Translation/item.json
@@ -2710,7 +2710,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bão Trận - Vũ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2728,7 +2728,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bão Trận - Áo Giáp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2764,7 +2764,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bi Thảm - Áo Giáp",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2782,7 +2782,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bi Thảm - Đai",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2800,7 +2800,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bi Thảm - Giày",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2818,7 +2818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bi Thảm - Áo Thương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2836,7 +2836,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vua Hải Tặc - Vũ Khí",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2854,7 +2854,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vua Hải Tặc - Găng Tay",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2872,7 +2872,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vua Hải Tặc - Nhẫn",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2890,7 +2890,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Vua Hải Tặc - Dây Chuyền",
         "ar":"",
         "it":"",
         "pl":"",
