--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -280,7 +280,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "",
+        "vi": "Độc Vụ Thị Trấn",
         "ar": "",
         "it": "",
         "pl": "",
