--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -172,7 +172,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Khu Mỏ Chết Chóc",
+        "vi": "Khu Mỏ Tử Thần",
         "ar": "",
         "it": "",
         "pl": "",
@@ -280,7 +280,7 @@
         "de": "",
         "jp": "",
         "pt": "",
-        "vi": "Độc Vụ Thị Trấn",
+        "vi": "Độc Vụ Trấn",
         "ar": "",
         "it": "",
         "pl": "",
