--- a/Translation/item.json
+++ b/Translation/item.json
@@ -406,7 +406,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Đống Vàng",
+        "vi":"Cọc Vàng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1882,7 +1882,7 @@
         "de":"Herrscher Stiefel",
         "jp":"",
         "pt":"",
-        "vi":"Giày Hoàng Đế",
+        "vi":"Giày Đế Vương",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2404,7 +2404,7 @@
         "de":"Dünne Handschuhe",
         "jp":"",
         "pt":"",
-        "vi":"Găng Tay Da",
+        "vi":"Găng Tay Da Mỏng",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2746,7 +2746,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"Bi Thảm - Mũ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -2818,7 +2818,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Bi Thảm - Áo Thương",
+        "vi":"Bi Thảm - Áo Choàng",
         "ar":"",
         "it":"",
         "pl":"",
