--- a/Translation/general.json
+++ b/Translation/general.json
@@ -262,7 +262,7 @@
         "de":"Krieger",
         "jp":"",
         "pt":"",
-        "vi":"Chiến Sĩ",
+        "vi":"Kiếm Sĩ",
         "ar":"",
         "it":"",
         "pl":"",
@@ -622,7 +622,7 @@
         "de":"Bestätige Verkauf von {0}, um {1} Gold zu erhalten ?",
         "jp":"",
         "pt":"",
-        "vi":"Bạn có muốn bán {0} để nhận {1} vàng?",
+        "vi":"Xác nhận bán {0} để nhận {1} vàng?",
         "ar":"",
         "it":"",
         "pl":"",
@@ -730,7 +730,7 @@
         "de":"Meter",
         "jp":"",
         "pt":"",
-        "vi":"Thước",
+        "vi":"Mét",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1072,7 +1072,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giây",
+        "vi":"Gi",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1108,7 +1108,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Phút",
+        "vi":"P",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1144,7 +1144,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giờ",
+        "vi":"G",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1180,7 +1180,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Ngày",
+        "vi":"N",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1216,7 +1216,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Tháng",
+        "vi":"T",
         "ar":"",
         "it":"",
         "pl":"",
@@ -1306,7 +1306,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Thông Tin",
+        "vi":"T.Tin",
         "ar":"",
         "it":"",
         "pl":"",
