--- a/Translation/event.json
+++ b/Translation/event.json
@@ -3,7 +3,7 @@
         "en":"Enter",
         "fr":"Entrer",
         "es":"Entra en",
-        "ch":"進入",
+        "zh-cn":"進入",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Leave",
         "fr":"Sortir",
         "es":"Deje",
-        "ch":"離開",
+        "zh-cn":"離開",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Not Time",
         "fr":"Horaires",
         "es":"Horarios",
-        "ch":"時間不符",
+        "zh-cn":"時間不符",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Intro.",
         "fr":"Intro.",
         "es":"Intro.",
-        "ch":"介紹",
+        "zh-cn":"介紹",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Lava Core X 10",
         "fr":"Coeur de lave X 10",
         "es":"Lava Core X 10",
-        "ch":"熔岩核心 X 10",
+        "zh-cn":"熔岩核心 X 10",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Faster Lava Core refresh rate",
         "fr":"Taux de rafraichissement du Coeur de Lave plus élevé",
         "es":"Mayor velocidad de refresco del Core de Lava",
-        "ch":"加快熔岩核心刷新速度",
+        "zh-cn":"加快熔岩核心刷新速度",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Time: 10:00-11:00 18:00-19:00 (GMT+0)",
         "fr":"Horaires: 11:00-12:00 19:00-20:00 (GMT+1)",
         "es":"Horarios: 11:00-12:00 19:00-20:00 (GMT+1)",
-        "ch":"18:00-19:00 02:00-03:00 (GMT+8)",
+        "zh-cn":"18:00-19:00 02:00-03:00 (GMT+8)",
         "kr":"19:00-20:00 03:00-04:00 (GMT+9)",
         "ru":"13:00-14:00 21:00-22:00 (GMT+3)",
         "tr":"13:00-14:00 21:00-22:00 (GMT+3)",
