--- a/Translation/general.json
+++ b/Translation/general.json
@@ -3,7 +3,7 @@
         "en":"Guild",
         "fr":"Guilde",
         "es":"Gremio",
-        "ch":"公會",
+        "zh-cn":"公會",
         "kr":"",
         "ru":"Гильдия",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Group",
         "fr":"Groupe",
         "es":"Grupo",
-        "ch":"隊伍",
+        "zh-cn":"隊伍",
         "kr":"",
         "ru":"Группа",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Player [{0}] has sent you a group request",
         "fr":"Le joueur [{0}] vous à envoyer une demande de groupe",
         "es":"",
-        "ch":"玩家 [{0}] 對你發出了一個組隊邀請",
+        "zh-cn":"玩家 [{0}] 對你發出了一個組隊邀請",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Gold",
         "fr":"Or",
         "es":"Oro",
-        "ch":"金幣",
+        "zh-cn":"金幣",
         "kr":"",
         "ru":"Золото",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Token",
         "fr":"Coupon",
         "es":"",
-        "ch":"魔能",
+        "zh-cn":"魔能",
         "kr":"",
         "ru":"Жетон",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Tokens",
         "fr":"Jetons",
         "es":"",
-        "ch":"魔能",
+        "zh-cn":"魔能",
         "kr":"",
         "ru":"Жетоны",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"Coupon",
         "fr":"Coupon",
         "es":"Cupón",
-        "ch":"代金券",
+        "zh-cn":"代金券",
         "kr":"",
         "ru":"Купон",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Coupons",
         "fr":"Coupons",
         "es":"Cupones",
-        "ch":"代金券",
+        "zh-cn":"代金券",
         "kr":"",
         "ru":"Купоны",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Exp",
         "fr":"Exp",
         "es":"Exp",
-        "ch":"經驗",
+        "zh-cn":"經驗",
         "kr":"",
         "ru":"Опыт",
         "tr":"",
@@ -165,7 +165,7 @@
         "en":"Magipoint",
         "fr":"Magie noire",
         "es":"Puntos Magicos",
-        "ch":"魔力值",
+        "zh-cn":"魔力值",
         "kr":"",
         "ru":"Магипоинт",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"New",
         "fr":"Nouvelle",
         "es":"",
-        "ch":"新",
+        "zh-cn":"新",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Get Reward",
         "fr":"Obtenir la récompense",
         "es":"Obtener la recompensa",
-        "ch":"獲取獎勵",
+        "zh-cn":"獲取獎勵",
         "kr":"",
         "ru":"Получить вознаграждение",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Quest Reward",
         "fr":"Récompense de quête",
         "es":"Recompensa de misión",
-        "ch":"任務獎勵",
+        "zh-cn":"任務獎勵",
         "kr":"",
         "ru":"Награда за задание",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"Class",
         "fr":"Classe",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Warrior",
         "fr":"Guerrier",
         "es":"Guerrero",
-        "ch":"戰士",
+        "zh-cn":"戰士",
         "kr":"",
         "ru":"Воин",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Ranger",
         "fr":"Archer",
         "es":"Arquero",
-        "ch":"游俠",
+        "zh-cn":"游俠",
         "kr":"",
         "ru":"Лучник",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Mage",
         "fr":"Mage",
         "es":"Mago",
-        "ch":"魔法師",
+        "zh-cn":"魔法師",
         "kr":"",
         "ru":"Маг",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"M",
         "fr":"H",
         "es":"H",
-        "ch":"男",
+        "zh-cn":"男",
         "kr":"",
         "ru":"M",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"F",
         "fr":"F",
         "es":"M",
-        "ch":"女",
+        "zh-cn":"女",
         "kr":"",
         "ru":"Ж",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"Common",
         "fr":"Commun",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Uncommon",
         "fr":"Peu Commun",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"Rare",
         "fr":"Rare",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Epic",
         "fr":"Épique",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"Exotic",
         "fr":"Exotique",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -435,7 +435,7 @@
         "en":"Legendary",
         "fr":"Légendaire",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Artifact",
         "fr":"Artefact",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -471,7 +471,7 @@
         "en":"Level",
         "fr":"Niveau",
         "es":"Nivel",
-        "ch":"等級",
+        "zh-cn":"等級",
         "kr":"",
         "ru":"Уровень",
         "tr":"",
@@ -489,7 +489,7 @@
         "en":"Lv.",
         "fr":"Nv.",
         "es":"Nv.",
-        "ch":"Lv",
+        "zh-cn":"Lv",
         "kr":"",
         "ru":"Ур.",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Bind on Equip",
         "fr":"Lié quand Équipé",
         "es":"Enlazar al Equipar",
-        "ch":"裝備綁定",
+        "zh-cn":"裝備綁定",
         "kr":"",
         "ru":"Привязывается при экипировке",
         "tr":"",
@@ -525,7 +525,7 @@
         "en":"Bind on Pickup",
         "fr":"Lié quand Ramassé",
         "es":"Enlazar al recoger",
-        "ch":"拾取綁定",
+        "zh-cn":"拾取綁定",
         "kr":"",
         "ru":"Привязывается при поднятии",
         "tr":"",
@@ -543,7 +543,7 @@
         "en":"Bound",
         "fr":"Lié",
         "es":"Unido",
-        "ch":"已綁定",
+        "zh-cn":"已綁定",
         "kr":"",
         "ru":"Привязан",
         "tr":"",
@@ -561,7 +561,7 @@
         "en":"Peace",
         "fr":"Paix",
         "es":"Paz",
-        "ch":"和平",
+        "zh-cn":"和平",
         "kr":"",
         "ru":"Мирный",
         "tr":"",
@@ -579,7 +579,7 @@
         "en":"PK",
         "fr":"PVP",
         "es":"PVP",
-        "ch":"PK",
+        "zh-cn":"PK",
         "kr":"",
         "ru":"ПВП",
         "tr":"",
@@ -597,7 +597,7 @@
         "en":"Sell {0}",
         "fr":"Vendre {0}",
         "es":"Vender {0}",
-        "ch":"出售 {0}",
+        "zh-cn":"出售 {0}",
         "kr":"",
         "ru":"Продать {0}",
         "tr":"",
@@ -615,7 +615,7 @@
         "en":"Confirm sale {0} to get {1} Gold ?",
         "fr":"Confirmer vendre {0} pour obtenir {1} Or ?",
         "es":"¿Confirmar venta {0} para obtener {1} oro?",
-        "ch":"確認出售 {0} 並獲得 {1} 金幣嗎 ?",
+        "zh-cn":"確認出售 {0} 並獲得 {1} 金幣嗎 ?",
         "kr":"",
         "ru":"Поддтверждаете продажу {0} за {1} золота?",
         "tr":"",
@@ -633,7 +633,7 @@
         "en":"Buy",
         "fr":"Acheter",
         "es":"Comprar",
-        "ch":"購買",
+        "zh-cn":"購買",
         "kr":"",
         "ru":"Купить",
         "tr":"",
@@ -651,7 +651,7 @@
         "en":"Accept",
         "fr":"Accepter",
         "es":"",
-        "ch":"接受",
+        "zh-cn":"接受",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -669,7 +669,7 @@
         "en":"Cancel",
         "fr":"Annuler",
         "es":"",
-        "ch":"取消",
+        "zh-cn":"取消",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -687,7 +687,7 @@
         "en":"List",
         "fr":"Liste",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -705,7 +705,7 @@
         "en":"No cost",
         "fr":"Aucun coût",
         "es":"",
-        "ch":"無消耗",
+        "zh-cn":"無消耗",
         "kr":"",
         "ru":"Бесплатно",
         "tr":"",
@@ -723,7 +723,7 @@
         "en":"Yard",
         "fr":"Mètre",
         "es":"",
-        "ch":"米",
+        "zh-cn":"米",
         "kr":"",
         "ru":"Ярд",
         "tr":"",
@@ -741,7 +741,7 @@
         "en":"Second",
         "fr":"Seconde",
         "es":"",
-        "ch":"秒",
+        "zh-cn":"秒",
         "kr":"",
         "ru":"Секунда",
         "tr":"",
@@ -759,7 +759,7 @@
         "en":"Sec",
         "fr":"Sec",
         "es":"",
-        "ch":"秒",
+        "zh-cn":"秒",
         "kr":"",
         "ru":"Сек",
         "tr":"",
@@ -777,7 +777,7 @@
         "en":"Minute",
         "fr":"Minute",
         "es":"",
-        "ch":"分鐘",
+        "zh-cn":"分鐘",
         "kr":"",
         "ru":"Минута",
         "tr":"",
@@ -795,7 +795,7 @@
         "en":"Min",
         "fr":"Min",
         "es":"",
-        "ch":"分",
+        "zh-cn":"分",
         "kr":"",
         "ru":"Мин",
         "tr":"",
@@ -813,7 +813,7 @@
         "en":"Elite",
         "fr":"Élite",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -831,7 +831,7 @@
         "en":"Chief Elite",
         "fr":"Chef Élite",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -849,7 +849,7 @@
         "en":"Expel",
         "fr":"Expulser",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -867,7 +867,7 @@
         "en":"Transfer",
         "fr":"Transfert",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -885,7 +885,7 @@
         "en":"Leave",
         "fr":"Partir",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -903,7 +903,7 @@
         "en":"Enter",
         "fr":"Entrer",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -921,7 +921,7 @@
         "en":"Exit",
         "fr":"Sortir",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -939,7 +939,7 @@
         "en":"Reward",
         "fr":"Récompense",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -957,7 +957,7 @@
         "en":"Max",
         "fr":"Max",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -975,7 +975,7 @@
         "en":"Next Level",
         "fr":"Niveau Suivant",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -993,7 +993,7 @@
         "en":"Reset",
         "fr":"Réinitialiser",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1011,7 +1011,7 @@
         "en":"All",
         "fr":"Tout",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1029,7 +1029,7 @@
         "en":"Daily",
         "fr":"Journalière",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1047,7 +1047,7 @@
         "en":"Second",
         "fr":"Seconde",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1065,7 +1065,7 @@
         "en":"Sec",
         "fr":"Sec",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1083,7 +1083,7 @@
         "en":"Minute",
         "fr":"Minute",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1101,7 +1101,7 @@
         "en":"Min",
         "fr":"Min",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1119,7 +1119,7 @@
         "en":"Hour",
         "fr":"Heure",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1137,7 +1137,7 @@
         "en":"H",
         "fr":"H",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1155,7 +1155,7 @@
         "en":"Day",
         "fr":"Jour",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1173,7 +1173,7 @@
         "en":"D",
         "fr":"J",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1191,7 +1191,7 @@
         "en":"Month",
         "fr":"Mois",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1209,7 +1209,7 @@
         "en":"M",
         "fr":"M",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1227,7 +1227,7 @@
         "en":"Miss",
         "fr":"Raté",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1245,7 +1245,7 @@
         "en":"Name",
         "fr":"Nom",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1263,7 +1263,7 @@
         "en":"Item",
         "fr":"Objet",
         "es":"",
-        "ch":"道具復活",
+        "zh-cn":"道具復活",
         "kr":"",
         "ru":"Предмет",
         "tr":"",
@@ -1281,7 +1281,7 @@
         "en":"Gear",
         "fr":"Equipement",
         "es":"",
-        "ch":"裝備",
+        "zh-cn":"裝備",
         "kr":"",
         "ru":"Экипировка",
         "tr":"",
@@ -1299,7 +1299,7 @@
         "en":"Info",
         "fr":"Info",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1317,7 +1317,7 @@
         "en":"Back",
         "fr":"Retour",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -1335,7 +1335,7 @@
         "en":"Remove",
         "fr":"Retirer",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
