--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -3,7 +3,7 @@
         "en":"Gear Position",
         "fr":"Emplacement",
         "es":"Posición del equipo",
-        "ch":"裝備位置",
+        "zh-cn":"裝備位置",
         "kr":"",
         "ru":"Слот Экипировки",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Required Class",
         "fr":"Classe Requise",
         "es":"Clase requerida",
-        "ch":"職業限制",
+        "zh-cn":"職業限制",
         "kr":"",
         "ru":"Требуемый Класс",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Required Gender",
         "fr":"Genre Requis",
         "es":"Sexo requiredo",
-        "ch":"性別限制",
+        "zh-cn":"性別限制",
         "kr":"",
         "ru":"Требуемый Пол",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Required Lv",
         "fr":"Niveau Requis",
         "es":"Nivel requerido",
-        "ch":"等級限制",
+        "zh-cn":"等級限制",
         "kr":"",
         "ru":"Требуемый уровень",
         "tr":"",
@@ -75,7 +75,7 @@
         "en":"Spirit Lv",
         "fr":"Nv Esprit",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -93,7 +93,7 @@
         "en":"Soul Lv",
         "fr":"Nv d'Âme",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -111,7 +111,7 @@
         "en":"APT",
         "fr":"APT",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -129,7 +129,7 @@
         "en":"Spirit Talent",
         "fr":"Talent d'Esprit",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -147,7 +147,7 @@
         "en":"Points Left",
         "fr":"Points Restants",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -165,7 +165,7 @@
         "en":"Mod Stats",
         "fr":"Mod Stats",
         "es":"Mod Stats",
-        "ch":"改造數值",
+        "zh-cn":"改造數值",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -183,7 +183,7 @@
         "en":"ENCH Stats",
         "fr":"AMELIO Stats",
         "es":"Encantos Estadísticas",
-        "ch":"强化數值",
+        "zh-cn":"强化數值",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -201,7 +201,7 @@
         "en":"Max Items Carried",
         "fr":"Maximum Transporté",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -219,7 +219,7 @@
         "en":"Passive",
         "fr":"Passif",
         "es":"Pasivo",
-        "ch":"被動",
+        "zh-cn":"被動",
         "kr":"",
         "ru":"Пассивный",
         "tr":"",
@@ -237,7 +237,7 @@
         "en":"{0} sec cooldown",
         "fr":"{0} sec de recharge",
         "es":"{0} sec para Utilizar",
-        "ch":"{0} 秒冷卻時間",
+        "zh-cn":"{0} 秒冷卻時間",
         "kr":"",
         "ru":"{0} сек перезарядка",
         "tr":"",
@@ -255,7 +255,7 @@
         "en":"Instant",
         "fr":"Instantané",
         "es":"Instantánea",
-        "ch":"瞬發",
+        "zh-cn":"瞬發",
         "kr":"",
         "ru":"Мгновенный",
         "tr":"",
@@ -273,7 +273,7 @@
         "en":"Set as Target",
         "fr":"Cibler",
         "es":"Fijar como objetivo",
-        "ch":"選擇目標",
+        "zh-cn":"選擇目標",
         "kr":"",
         "ru":"Нацелится",
         "tr":"",
@@ -291,7 +291,7 @@
         "en":"Whisper",
         "fr":"Chuchoter",
         "es":"Susurro",
-        "ch":"密語",
+        "zh-cn":"密語",
         "kr":"",
         "ru":"Шепотом",
         "tr":"",
@@ -309,7 +309,7 @@
         "en":"Copy name",
         "fr":"Copier le nom",
         "es":"Copia Nombre",
-        "ch":"複製姓名",
+        "zh-cn":"複製姓名",
         "kr":"",
         "ru":"Копировать Имя",
         "tr":"",
@@ -327,7 +327,7 @@
         "en":"Invite Group",
         "fr":"Inviter Groupe",
         "es":"Grupo de Invitación",
-        "ch":"邀請組隊",
+        "zh-cn":"邀請組隊",
         "kr":"",
         "ru":"Пригласить в группу",
         "tr":"",
@@ -345,7 +345,7 @@
         "en":"Set new leader",
         "fr":"Changer leader",
         "es":"Establecer un nuevo líder",
-        "ch":"設爲隊長",
+        "zh-cn":"設爲隊長",
         "kr":"",
         "ru":"Сменить лидера",
         "tr":"",
@@ -363,7 +363,7 @@
         "en":"Expel from group",
         "fr":"Expulser du groupe",
         "es":"Expulsar del grupo",
-        "ch":"踢出隊伍",
+        "zh-cn":"踢出隊伍",
         "kr":"",
         "ru":"Исключить из группы",
         "tr":"",
@@ -381,7 +381,7 @@
         "en":"Leave group",
         "fr":"Partir du groupe",
         "es":"Deje el grupo",
-        "ch":"離開隊伍",
+        "zh-cn":"離開隊伍",
         "kr":"",
         "ru":"Покинуть Группу",
         "tr":"",
@@ -399,7 +399,7 @@
         "en":"Disband group",
         "fr":"Dissoudre le groupe",
         "es":"Disolver el grupo",
-        "ch":"解散隊伍",
+        "zh-cn":"解散隊伍",
         "kr":"",
         "ru":"Распустить группу",
         "tr":"",
@@ -417,7 +417,7 @@
         "en":"Check Gear",
         "fr":"Inspecter",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -435,7 +435,7 @@
         "en":"Invite Guild",
         "fr":"Inviter Guilde",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -453,7 +453,7 @@
         "en":"Base attribute value: {0}",
         "fr":"Valeur de base de l'attribut: {0}",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -471,7 +471,7 @@
         "en":"Additional gain from equipment: {0}%",
         "fr":"Gain supplémentaire de l'équipement: {0}%",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -489,7 +489,7 @@
         "en":"Additional gain from talents: {0}%",
         "fr":"Gain supplémentaire des talents: {0}%",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
@@ -507,7 +507,7 @@
         "en":"Additional gain from buffs: {0}%",
         "fr":"Gain supplémentaire des buffs: {0}%",
         "es":"",
-        "ch":"",
+        "zh-cn":"",
         "kr":"",
         "ru":"",
         "tr":"",
