--- a/Translation/config.json
+++ b/Translation/config.json
@@ -3,7 +3,7 @@
         "en":"Sound",
         "fr":"Audio",
         "es":"Sonido",
-        "ch":"聲音",
+        "zh-cn":"聲音",
         "kr":"",
         "ru":"Звук",
         "tr":"",
@@ -21,7 +21,7 @@
         "en":"Graphics",
         "fr":"Graphiques",
         "es":"Gráficos",
-        "ch":"畫面",
+        "zh-cn":"畫面",
         "kr":"",
         "ru":"Графика",
         "tr":"",
@@ -39,7 +39,7 @@
         "en":"Volume of ambience",
         "fr":"Volume des musiques d'ambiances",
         "es":"Volumen del ambiente",
-        "ch":"音量 環境音樂",
+        "zh-cn":"音量 環境音樂",
         "kr":"",
         "ru":"Звук окружения",
         "tr":"",
@@ -57,7 +57,7 @@
         "en":"Volume of sound effects",
         "fr":"Volume des effets sonores",
         "es":"Volumen de los efectos de sonido",
-        "ch":"音量 聲音效果",
+        "zh-cn":"音量 聲音效果",
         "kr":"",
         "ru":"Громкость звуковых эффектов",
         "tr":"",
