--- a/Translation/map.json
+++ b/Translation/map.json
@@ -550,6 +550,63 @@
         "th":"",
         "id":""
     },
+    "map.Instance_30_map1.name":{
+        "en":"Pirate Camp Site",
+        "fr":"Site du camp de pirates",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_30_map2.name":{
+        "en":"Pirate Camp",
+        "fr":"Camp Pirate",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "map.Instance_30_map3.name":{
+        "en":"Pirate's Lair",
+        "fr":"Repaire des Pirates",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C2_Muradin_Harbor.name":{
         "en":"Muradin Harbor",
         "fr":"Port de Muradin",
