--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5701,7 +5701,7 @@
     },
     "UI.windows.elements.effect.light":{
         "en":"Elemental Healing",
-        "fr":"Dégâts Crit Élémentaire",
+        "fr":"Soin Élémentaire",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
