--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5635,7 +5635,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"K.nghiệm nguyên tố cần thêm: {0}",
         "ar":"",
         "it":"",
         "pl":"",
