--- a/Translation/general.json
+++ b/Translation/general.json
@@ -182,7 +182,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"",
+        "vi":"K.Nghiệm Nguyên Tố",
         "ar":"",
         "it":"",
         "pl":"",
