--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -3868,7 +3868,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"một Tinh Linh là một vật phẩm đặc biệt giúp người chơi biến đổi thành quái vật. Người chơi sở hữu tinh linh không chỉ được tăng chỉ số mà đồng thời, người chơi có thể biến hình thành tinh linh đó và sử dụng những kỹ năng đặc biệt chỉ riêng tinh linh đó sở hữu.",
+        "vi":"Một Tinh Linh là một vật phẩm đặc biệt cho phép người chơi biến thành quái vật. Người chơi khi sở hữu một Tinh Linh, ngoài việc được tăng chỉ số, còn đồng thời có thể biến thành Tinh Linh của họ và sử dụng những kỹ năng mà chỉ riêng Tinh Linh này có thể sử dụng được.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3887,7 +3887,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Làm thế nào để có được một Tinh Linh?",
+        "vi":"Làm thế nào để có được một Tinh Linh",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3906,7 +3906,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Hầu hết các loại quái vật đều có thể trở thành Tinh Linh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.<br> 1) Giết quái vật Tinh Anh có thể rơi ra trứng.<br> 2) Trong khi đánh phụ bản, tiêu diệt trùm cuối và các loại quái đặc biệt có thể rơi ra trứng.<br> 3) Đánh trùm thế giới cũng có khả năng nhỏ rơi ra trứng.<br> 4) Loại trứng càng hiếm, loài thú đó càng mạnh, và cũng có nhiều may mắn hơn để trứng nở ra thành công.",
+        "vi":"Hầu hết các loại quái vật đều có thể trở thành Tinh Linh. Nếu bạn tìm được một Linh Trứng, nhấn chuột phải lên quả trứng để thử ấp nó, nhưng sẽ có khả năng thất bại.<br> 1) Giết quái vật Tinh Anh có thể rơi ra trứng.<br> 2) Trong khi đánh phụ bản, tiêu diệt trùm cuối và các loại quái đặc biệt có thể rơi ra trứng.<br> 3) Đánh trùm thế giới cũng có khả năng nhỏ rơi ra trứng.<br> 4) Loại trứng càng hiếm, loài quái vật đó càng mạnh, và cũng có nhiều may mắn hơn để trứng nở ra thành công.",
         "ar":"",
         "it":"",
         "pl":"",
@@ -3944,7 +3944,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Giới Hạn Cấp {0}",
+        "vi":"Cấp Tối Đa {0}",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4001,7 +4001,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Điểm Hoàn Thiện",
+        "vi":"Điểm Cải Thiện",
         "ar":"",
         "it":"",
         "pl":"",
@@ -4210,7 +4210,7 @@
         "de":"",
         "jp":"",
         "pt":"",
-        "vi":"Độ Sinh Triển",
+        "vi":"Độ Sinh Trưởng",
         "ar":"",
         "it":"",
         "pl":"",
